<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:fontFamily="cursive"
        android:text="@string/tvRolTrabajo_default"
        android:id="@+id/tvRolTrabajo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvNombreEmpresa_default"
        android:id="@+id/tvNombreEmpresa" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvHoras"
            android:id="@+id/tvHoras" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvHoras_cantidad"
            android:id="@+id/tvCantHoras" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvIngresoPorHora"
            android:id="@+id/tvIngresoPorHora" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvIngresoPorHora_cantPlata"
            android:id="@+id/tvIngresoPorHora_plata" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/imageViewBanderaPais"
            android:layout_weight="0.96" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvFechaFin"
            android:id="@+id/tvFechaFin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tvFecha"
            android:id="@+id/tvFecha" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxEnIngles"
            android:id="@+id/checkBoxEnIngles"
            android:enabled="false"
            android:checked="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>
</LinearLayout>